<resources>
    <string name="app_name">HefestoNotes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="titulo">Titulo</string>
    <string name="contenido">Contenido</string>
    <string name="rellena_nota">Escribe aqui tu nota</string>
    <string name="categoria">Categoria</string>
    <string name="categoria_intro">Introduce una categoria para tu nota</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="ListaVacia">Aun no ha guardado ninguna nota</string>
    <string name="a_adir">Añadir</string>
    <string name="borrar_lista">Borrar todas las notas</string>
    <string name="msg_info">Lista de Notas, aquí puede ver todas las notas que tiene guardadas </string>
    <string name="info">Información</string>
    <string name="nota_guardada">Su nota se ha guardado</string>
    <string name="inc_key">Clave incorrecta</string>
    <string name="intr_key">Introduce la clave</string>
    <string name="Descifrar">Descifrar</string>
    <string name="cifrar">Cifrar</string>
    <string name="error_detalle">Problema al editar o crear el producto</string>
    <string name="empty_key">Aun no ha registrado los parametros de seguridad para cifrar sus notas, introduzcalos continuación:</string>
    <string name="decirCifrado">Su nota se ha cifrado</string>
    <string name="decirDescifrado">Su nota se ha descifrado</string>
    <string name="confirm_exit">¿Salir sin guardar?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tituloContraseña">Contraseña</string>
    <string name="rellena_contraseña">Escribe aqui tu contraseña</string>
    <string name="titulo_pregunta">Tu Pregunta</string>
    <string name="formula_preg">Formula tu pregunta</string>
    <string name="respuesta">Respuesta</string>
    <string name="formula_respuesta">Escribe aquí la respuesta a la pregunta anterior</string>
    <string name="rellenar_todo">Debe rellenar todos los campos</string>
    <string name="Seg_Guardada">Todos los campos se han guardado</string>
    <string name="titulo_vacio">La nota debe tener un título</string>
    <string name="change_pass">Modificar Contraseña</string>
    <string name="responda_pregunta">Para modificar la contraseña, debe dar la respuesta correcta a la pregunta que guardó:</string>
    <string name="dialogo_pass_cambiada">Clave modificada correctamente</string>
    <string name="dialogo_R_incorrecta">Lo siento, esa no es la respuesta que dió la otra vez</string>
    <string name="intr_nueva_pass">Introduzca ahora su nueva contraseña:</string>
    <string name="help">Ayuda</string>
    <string name="explicacion_login">La contraseña que escriba será la que se use para cifrar las notas. La pregunta y la respuesta, una vez guardadas, no se pueden cambiar. Si quiere cambiar la contraseña, se le formulará la pregunta que escriba y se le pedirá que de la respuesta dada en el último campo.</string>
    <string name="delete">Borrar</string>
    <string name="seg_guardada">Sus parametros se han guardado correctamente</string>
    <string name="conf_borrar_nota">¿Seguro que quiere borrar la nota?</string>
    <string name="atencion">Atención</string>
    <string name="nota_eliminada">Su nota ha sido eliminada</string>
    <string name="confirm_borrado_album">Todas su notas se borrarán, ¿Está seguro?</string>

</resources>
