<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hefesto.bg.hefestonotes.activities.ListActivity">
    <item
        android:id="@+id/Annadir"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/a_adir"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true">
    </item>
    <item
        android:id="@+id/ModificarContraseña"
        android:title="@string/change_pass">
    </item>
    <item
        android:id="@+id/info"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/info">
    </item>
    <item
        android:id="@+id/BorrarLista"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/borrar_lista">
    </item>


</menu>
