


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hefesto.bg.hefestonotes.activities.LoginActivity"
        android:background="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="15sp"
            android:textStyle="bold"
            android:text="@string/tituloContraseña" />
        <EditText
            android:id="@+id/editContraseña"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/rellena_contraseña"
            android:inputType="text" />

        <TextView
            android:id="@+id/Pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/titulo_pregunta"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPregunta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/formula_preg" />

        <TextView
            android:id="@+id/categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:text="@string/respuesta"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editRespuesta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/formula_respuesta" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:text="@string/guardar"
            android:id="@+id/buttonSaveSeg"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


