<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.08"
            android:gravity="center"
            android:text="Titulo"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/lockButton"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_menu_descifrar" />

    </RelativeLayout>


    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignParentStart="true"
        android:layout_weight="0.12"
        android:background="@android:color/white"
        android:hint="@string/titulo" />

    <TextView
        android:id="@+id/URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_weight="0.08"
        android:gravity="center"
        android:text="@string/contenido"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editContenido"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:background="@android:color/white"
        android:hint="@string/rellena_nota"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_weight="0.08"
        android:text="@string/categoria"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.08"
        android:background="@android:color/white"
        android:hint="@string/categoria_intro" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="130sp"
            android:layout_height="60sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/guardar"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="130sp"
            android:layout_height="60sp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/saveButton"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="40sp"
            android:text="@string/cancelar"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>


</LinearLayout>